--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 service_account_key.json
 /snippets
-
-# brands/79051850-5db6-4b75-bb18-b957bba392dc/agents/5d735f7e-95a1-49e1-90e7-fd34e9c78e99
-
-# // create location -launch
-
-# brands/79051850-5db6-4b75-bb18-b957bba392dc/locations/aee8d074-f2ff-45c6-b750-c4aee5c3d6b2
+venv
